# todolistapp

./: .env  Cargo.toml  READ.md  bitnorm.md
migrations/2023-01-26-101104_todo/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  todo.rs
