[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.3", features =["postgres", "chrono"]}
dotenvy = "0.15.6"
chrono = {version="0.4.23", features=["serde"]}
serde = {version="1.0.152", features=["derive"]}
actix-web = "4.3.0"